[project]
name = "cmo_db_inspector"
version = "0.0.2"
description = 'CMO Database Inspector, view data and test some quick modeling derivated from Harpoon and theory'
readme = "readme.md"
requires-python = ">=3.9"
authors = [
  { name = "yiyuezhuo", email = "yiyuezhuo@gmail.com" },
]

dependencies = [
  "gradio",
  "plotly",
  "sqlalchemy<2.0.0",
  "pandas<2.0.0"
]

[project.urls]
homepage = "https://github.com/yiyuezhuo/cmo_db_inspector"
documentation = "https://github.com/yiyuezhuo/cmo_db_inspector"
repository = "https://github.com/yiyuezhuo/cmo_db_inspector"
changelog = "https://github.com/yiyuezhuo/cmo_db_inspector"
